# TaiwanBusFlet

./: .gitignore  README.md  build.sh  pubspec.yaml  pyproject.toml
.github/workflows/: build.yml  release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/mycompany/taiwanbusflet/: MainActivity.kt
android/app/src/main/kotlin/tw/avianjay/taiwanbusflet/: MainActivity.kt
app/: .gitignore  app.zip.hash
app/src/: config.py  main.py  multiplatform.py  requirements.txt  web.py
ios/: exportOptions.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: android.py  config.py  ios.py  main.py  multiplatform.py  search.py  viewbus.py  web.py
web/: index.html  manifest.json  python-worker.js
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
