[project]
name = "taiwanbusflet"
version = "0.1.0"
description = "Yet Another Taiwan Bus App"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AvianJay", email = "avianjay@avianjay.sbs" }
]
dependencies = [
  "flet==0.28.2",
  "taiwanbus==0.1.0",
  "flet-geolocator==0.1.0",
  "requests>2.26.0",
  "flet-permission-handler==0.1.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "tw.avianjay"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "YABus"

# company name to display in about app dialogs
company = "AvianJay"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by AvianJay"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}

[tool.flet.android]
dependencies = [
  "pyjnius"
]
min_sdk_version = 24

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"

[tool.flet.android.permission]
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.ACCESS_FINE_LOCATION" = true
"android.permission.ACCESS_COARSE_LOCATION" = true
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.WAKE_LOCK" = true
"android.permission.ACCESS_BACKGROUND_LOCATION" = true
"android.permission.FOREGROUND_SERVICE" = true
"android.permission.FOREGROUND_SERVICE_LOCATION" = true
